# SparkOCR-VLM

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATABRICKS_FREE.md  HARNESS.md  LICENSE  MAC_INTEL_SETUP.md  MODELS.md  README.md  RUNTIME.md  TESTING.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
notebooks/: 01_quickstart.ipynb  02_databricks_free.ipynb  03_evaluation.ipynb
runtime/: DECISIONS.md  ERRORS.md  PROGRESS.md
scripts/: push_databricks.sh  run_smoke.sh  setup_local.sh
src/sparkocr_vlm/: __init__.py  config.py  evaluator.py  page_extractor.py  pipeline.py  processor.py  schema.py
src/sparkocr_vlm/backends/: __init__.py  _oai_compatible.py  base.py  gemini.py  mock.py  modal_backend.py  openrouter.py  together.py
src/sparkocr_vlm/utils/: cost.py  delta.py  image.py  spark_helpers.py
tasks/: 00-overview.md  01-scaffold.md  02-schema-config.md  03-page-extractor.md  04-backends-base.md  05-backend-openrouter.md  06-backend-together.md  07-backend-gemini.md  08-processor-udf.md  09-pipeline.md  10-evaluator.md  11-tests-harness.md  12-notebooks.md  13-databricks-deploy.md  14-readme-demo.md
tests/: conftest.py  test_backends_mock.py  test_backends_oai_helper.py  test_backends_openrouter.py  test_evaluator.py  test_harness.py  test_page_extractor.py  test_pipeline.py  test_processor.py
tests/fixtures/golden/: synth_invoice.md  synth_report.md  synth_table.md
tests/harness/: __init__.py  golden.py  perf.py  synthetic_pdf.py
