[project]
name = "sparkocr-vlm"
version = "0.1.0"
description = "Distributed VLM-based OCR on PySpark. DeepSeek-OCR-v2 + Qwen3-VL, with Delta Lake."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sabareeswaran S", email = "sabareeswarans11@gmail.com" }]
keywords = ["spark", "ocr", "vlm", "delta-lake", "deepseek", "qwen"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "Pillow>=11.0.0",
    "pymupdf>=1.25.0",
    "mlflow>=2.18.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
modal = ["modal>=0.73.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "reportlab>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/sabareeswarans11/SparkOCR-VLM"
Repository = "https://github.com/sabareeswarans11/SparkOCR-VLM"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparkocr_vlm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: requires real API keys; skipped by default",
    "slow: takes > 10s",
    "databricks: requires databricks workspace",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
